# Machine-Learning-Projects

./: .gitignore  README.md  pyproject.toml
recommendation_system/: movies_suggest.ipynb
spam_detector/: spam_ham_model.ipynb
