[project]
name = "machine-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "xgboost>=3.1.2",
]
